--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <form class="todo" >
     <h1 class="app-name"> To-Do List App</h1>
     <div>
-        <input type="text" class="add-task"/>
+        <input type="text" class="add-task" placeholder="Add Todo"/>
         <button id="add">Add</button>
     </div>
 
